# code-templates

c-library/: makefile
c-library/scripts/: run_tests.sh
c-project/: README.md  makefile
c-project/src/: main.c
cmake/: CMakeLists.txt
cmake/src/: CMakeLists.txt
cmake/tests/: CMakeLists.txt
